[package]
name = "sccache-dist"
version = "0.1.0"
authors = ["Aidan Hobson Sayers <aidanhs@cantab.net>"]

# https://github.com/rust-lang/cargo/issues/1982#issuecomment-319661478
[[bin]]
name = "sccache-dist"
required-features = ["binaries"]

[features]
binaries = ["clap", "crossbeam-utils", "env_logger", "flate2", "libmount", "nix", "tar"]

[dependencies]
clap = { version = "2.23.0", optional = true }
crossbeam-utils = { version = "0.4", optional = true }
env_logger = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true, default-features = false, features = ["rust_backend"] }
libmount = { version = "0.1.10", optional = true }
nix = { version = "0.11.0", optional = true }
tar = { version = "0.4", optional = true }

bincode = "0.9" # TODO: update to 1.0
byteorder = "1.0"
error-chain = { version = "0.11", default-features = false }
futures = "0.1.11"
log = "0.3.6"
lru-disk-cache = { path = "../lru-disk-cache" }
num_cpus = "1.0"
# Since we use the unstable async API
reqwest = { version = "=0.8.6", features = ["unstable"] }
ring = "0.12.1"
# Need https://github.com/tomaka/rouille/pull/185
#rouille = "2.1"
rouille = { git = "https://github.com/tomaka/rouille.git", rev = "7b6b2eb" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "2.1.5"
tokio-core = "0.1.6"
